change layout in the menu drawer for local selectors and fixed some spacing in header

--- a/assets/component-localization-form.css
+++ b/assets/component-localization-form.css
@@ -228,7 +228,7 @@ noscript .localization-selector.link {
 
 .header__icons--localization {
   align-items: center;
-  height: 4.4rem;
+  min-height: 4.4rem;
 }
 
 .header__icons--localization .localization-form__select {
@@ -261,6 +261,11 @@ noscript .localization-selector.link {
 }
 
 /* Menu drawer */
+.menu-drawer__localization localization-form{
+  display: block;
+}
+
+
 .menu-drawer__localization .localization-form__select {
   background-color: initial;
   margin-top: 0;
@@ -271,8 +276,8 @@ noscript .localization-selector.link {
   right: 1rem;
 }
 
-.menu-drawer__localization .localization-form:only-child {
-  padding-bottom: 0;
+.menu-drawer__localization .localization-form {
+  padding: 0;
 }
 
 .menu-drawer__localization .localization-form:only-child .localization-form__select {
